use label instead of comment

--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -1,12 +1,41 @@
 name: Static checks
 run-name: Static checks
-
 on:
     pull_request:
       types: [opened, synchronize]
+
+permissions:
+  contents: write
 jobs:
+  pre-commit-run:
+    name: Pre-commit run
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Install dependencies
+      run: |
+        sudo apt update
+        sudo apt install \
+           pre-commit
+        pip install identify --upgrade
+        pre-commit install
+    - name: Run pre-commit on all files
+      run: pre-commit run --all --color always --verbose
+    - name: Commit clang-tidy-fixes
+      if: ${{contains(github.event.pull_request.labels.*.name, 'auto-fix' && failure() )}}
+      run: |
+         git config user.name github-actions
+         git config user.email github-actions@github.com
+         git add .
+         git commit -m 'fix format'
+         git push origin ${{ github.ref }}
+    - name: check for todo fixme note
+      run: |
+        NTODOS="$(grep -r 'TODO DONT MERGE' --exclude-dir=.github | wc -l)"
+        echo "Found $NTODOS TODO DONT MERGE notes"
+        ! grep -q -r "TODO DONT MERGE" --exclude-dir=.github
   build-compilation-db:
-    if: ${{!contains(github.event.pull_request.labels.*.name, 'Skip-build')}}
+    if: ${{!contains(github.event.pull_request.labels.*.name, 'Skip-build') }}
     name: Build with IWYU
     runs-on: ubuntu-latest
     steps:
@@ -88,7 +117,14 @@ jobs:
           | grep -F -f pattern - > files
         # run clang-tidy on all specified files
         clang-tidy-16 --fix --extra-arg=-w -p build/develop $(cat files)
-
+    - name: Commit clang-tidy-fixes
+      if: ${{contains(github.event.pull_request.labels.*.name, 'auto-fix')}}
+      run: |
+         git config user.name github-actions
+         git config user.email github-actions@github.com
+         git add .
+         git commit -m 'fix format'
+         git push origin ${{ github.ref }}
     - name: Check for fixes
       run: |
         if [[ $(git ls-files -m | wc -l) -eq 0 ]]; then
@@ -98,25 +134,6 @@ jobs:
         echo "Please use your local clang-tidy or apply the following patch:"
         git diff -p
         exit 1
-  pre-commit-run:
-    name: Pre-commit run
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - name: Install dependencies
-      run: |
-        sudo apt update
-        sudo apt install \
-           pre-commit
-        pip install identify --upgrade
-        pre-commit install
-    - name: Run pre-commit on all files
-      run: pre-commit run --all --color always --verbose
-    - name: check for todo fixme note
-      run: |
-        NTODOS="$(grep -r 'TODO DONT MERGE' --exclude-dir=.github | wc -l)"
-        echo "Found $NTODOS TODO DONT MERGE notes"
-        ! grep -q -r "TODO DONT MERGE" --exclude-dir=.github
   changelog:
     if: ${{!contains(github.event.pull_request.labels.*.name, 'Skip-Changelog')}}
     name: Changelog check
