--- a/.github/workflows/build_doc.yaml
+++ b/.github/workflows/build_doc.yaml
@@ -56,7 +56,9 @@ jobs:
       uses: thollander/actions-comment-pull-request@v2
       with:
         message: |
-          Deployed test documentation to https://exasim-project.com/NeoFOAM/Build_PR_${{ env.PR_NUMBER }}
+          Thank you for your PR, here are some useful tips:
+          - Use labels to change the workflow behavior. Set `auto-fix` to automatically apply fixes, `full-ci` for a comprehensive set of tests and sanitizer runs, `ready-for-review` to show that you're done and need a review.
+          - I deployed a test documentation to https://exasim-project.com/NeoFOAM/Build_PR_${{ env.PR_NUMBER }}
         comment_tag: build_url
 
     - name: Echo Build PR URL
