check if clang-tidy auto-fix works

--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -87,6 +87,8 @@ jobs:
     needs: [build-compilation-db]
     steps:
     - uses: actions/checkout@v4
+      with:
+        ref: ${{env.BRANCH_NAME}}
 
     - name: Add clang repo
       run: |
@@ -136,7 +138,7 @@ jobs:
          git config user.email github-actions@github.com
          git add .
          git commit -m 'fix format'
-         git push origin ${{ github.ref }}
+         git push origin ${{ github.BRANCH_NAME }}
   changelog:
     if: ${{!contains(github.event.pull_request.labels.*.name, 'Skip-Changelog')}}
     name: Changelog check
