--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -134,6 +134,7 @@ jobs:
     - name: Commit clang-tidy-fixes
       if: ${{contains(github.event.pull_request.labels.*.name, 'auto-fix') && failure()}}
       run: |
+         rm pattern files
          git config user.name github-actions
          git config user.email github-actions@github.com
          git add .
