check for specific failure

--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -23,9 +23,10 @@ jobs:
         pip install identify --upgrade
         pre-commit install
     - name: Run pre-commit on all files
+      id: pre-commit
       run: pre-commit run --all --color always --verbose
     - name: Commit pre-commit fixes
-      if: ${{contains(github.event.pull_request.labels.*.name, 'auto-fix') && failure()}}
+      if: ${{contains(github.event.pull_request.labels.*.name, 'auto-fix') && failure() && steps.pre-commit.conclusion == 'failure'}}
       run: |
          git config user.name github-actions
          git config user.email github-actions@github.com
@@ -123,6 +124,7 @@ jobs:
         # run clang-tidy on all specified files
         clang-tidy-16 --fix --extra-arg=-w -p build/develop $(cat files)
     - name: Check for fixes
+      id: tidy-fixes
       run: |
         if [[ $(git ls-files -m | wc -l) -eq 0 ]]; then
           exit 0
@@ -132,7 +134,7 @@ jobs:
         git diff -p
         exit 1
     - name: Commit clang-tidy-fixes
-      if: ${{contains(github.event.pull_request.labels.*.name, 'auto-fix') && failure()}}
+      if: ${{contains(github.event.pull_request.labels.*.name, 'auto-fix') && failure() && steps.tidy-fixes.conclusion == 'failure'}}
       run: |
          rm pattern files
          git config user.name github-actions
