try to create if not existing comment

--- a/.github/workflows/build_doc.yaml
+++ b/.github/workflows/build_doc.yaml
@@ -61,6 +61,7 @@ jobs:
           - I deployed a test documentation to https://exasim-project.com/NeoFOAM/Build_PR_${{ env.PR_NUMBER }}
           - If this is your first PR, please add yourself to the AUTHORS.md file
         comment_tag: build_url
+        mode: createIfNotExists
 
     - name: Echo Build PR URL
       run: |
