add target directory

--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -156,6 +156,7 @@ jobs:
           source-directory: ${{github.event.number}}
           destination-github-username: 'exasim-project'
           destination-repository-name: 'NeoFOAM-BenchmarkData'
+          target-directory: ${{github.event.number}}
           user-email: github-actions@github.com
           target-branch: main
   stop-runner:
