--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -140,9 +140,9 @@ jobs:
           cmake --preset profiling
           cmake --build --preset profiling
           ctest --preset profiling
-          mkdir -p ${{github.event.number}}
-          cp build/profiling/bin/benchmarks/*.xml ${{github.event.number}}/
-          lscpu > ${{github.event.number}}/lscpu.log
+          mkdir -p ${{github.event.number}}/gdnxlarge
+          cp build/profiling/bin/benchmarks/*.xml ${{github.event.number}}/gdnxlarge
+          lscpu > ${{github.event.number}}/gdnxlarge/lscpu.log
       - name: Push Benchmark Data
         uses: cpina/github-action-push-to-another-repository@main
         env:
@@ -151,7 +151,7 @@ jobs:
           source-directory: ${{github.event.number}}
           destination-github-username: 'exasim-project'
           destination-repository-name: 'NeoFOAM-BenchmarkData'
-          target-directory: ${{github.event.number}}
+          target-directory: ${{github.event.number}}/gdnxlarge
           user-email: github-actions@github.com
           target-branch: main
   stop-runner:
