--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -97,3 +97,6 @@ add_subdirectory(fields)
 add_subdirectory(finiteVolume)
 add_subdirectory(mesh)
 add_subdirectory(timeIntegration)
+if(NEOFOAM_WITH_PETSC)
+  add_subdirectory(petsc)
+endif()
