refere to benchmark data repo

--- a/.github/workflows/build_doc.yaml
+++ b/.github/workflows/build_doc.yaml
@@ -68,6 +68,7 @@ jobs:
           Thank you for your PR, here are some useful tips:
           - Use labels to change the workflow behavior. Set `auto-fix` to automatically apply fixes, `full-ci` for a comprehensive set of tests and sanitizer runs, `ready-for-review` to show that you're done and need a review.
           - I deployed a test documentation to https://exasim-project.com/NeoFOAM/Build_PR_${{ env.PR_NUMBER }}
+          - For `full-ci` builds benchmark results are available at https://github.com/exasim-project/NeoFOAM-BenchmarkData/${{ env.PR_NUMBER }}
           - If this is your first PR, please add yourself to the AUTHORS.md file
         comment_tag: build_url
         mode: createIfNotExists
