--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -1,31 +1,28 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2023-25 NeoFOAM authors
 
-function(neofoam_benchmark TEST)
+function(neofoam_benchmark BENCH)
 
-  add_executable(bench_${TEST} "${TEST}.cpp")
-  target_link_libraries(bench_${TEST} PRIVATE Catch2::Catch2 NeoFOAM)
+  add_executable(bench_${BENCH} "${BENCH}.cpp")
+  target_link_libraries(bench_${BENCH} PRIVATE Catch2::Catch2 NeoFOAM)
 
   if(WIN32)
     set_target_properties(
-      bench_${TEST}
-      PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/benchmarks/$<0:>
-                 LIBRARY_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/benchmarks/$<0:>
-                 ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/benchmarks/$<0:>)
+      bench_${BENCH}
+      PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/benchmarks/
+                 LIBRARY_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/benchmarks/
+                 ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/benchmarks/)
   else()
-    set_property(TARGET bench_${TEST} PROPERTY RUNTIME_OUTPUT_DIRECTORY
-                                               ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/benchmarks)
-  endif()
-  if(NOT DEFINED "neofoam_COMMAND")
-    set(neofoam_COMMAND bench_${TEST})
+    set_property(TARGET bench_${BENCH} PROPERTY RUNTIME_OUTPUT_DIRECTORY
+                                                ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/benchmarks)
   endif()
 
   if(NOT DEFINED "neofoam_WORKING_DIRECTORY")
     set(neofoam_WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/benchmarks)
   endif()
   add_test(
-    NAME bench_${TEST}
-    COMMAND sh -c "./${neofoam_COMMAND} -r xml > ${TEST}.xml"
+    NAME bench_${BENCH}
+    COMMAND sh -c "./bench_${BENCH} -r xml > ${BENCH}.xml"
     WORKING_DIRECTORY ${neofoam_WORKING_DIRECTORY})
 endfunction()
 
