--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -138,7 +138,7 @@ jobs:
           python3 -m pip install xmltodict
           CC=clang \
           CXX=clang++ \
-          cmake --preset profilinj
+          cmake --preset profiling
           cmake --build --preset profiling
           ctest --preset profiling
           mkdir -p ${{github.event.number}}/main
