--- a/test/petsc/CMakeLists.txt
+++ b/test/petsc/CMakeLists.txt
@@ -4,19 +4,20 @@
 set(CMAKE_C_COMPILER ${PETSC_C_COMPILER})
 set(CMAKE_CXX_COMPILER ${PETSC_CXX_COMPILER})
 
-ExternalProject_Get_Property(petsc)
+message("LIBRARY_DIRS")
+message("${PETSc_LIBRARY_DIRS}")
+
+message("INCLUDE_DIRS")
+message("${PETSc_INCLUDE_DIRS}")
 
 function(petsc_test TEST)
   add_executable(${TEST} "${TEST}.cpp")
-  set_property(TARGET ${TEST} PROPERTY ENABLE_EXPORTS 1)
-  target_include_directories(
-    ${TEST}
-    PUBLIC ${CMAKE_BINARY_DIR}/petsc/src/petsc/include ${CMAKE_BINARY_DIR}/petsc/opt/petsc/include/
-           ${CMAKE_BINARY_DIR}/petsc/src/petsc/include/)
-  link_directories(${CMAKE_BINARY_DIR}/petsc/opt/petsc/lib)
-  target_link_libraries(${TEST} PUBLIC ${CMAKE_BINARY_DIR}/petsc/opt/petsc/lib/libpetsc.so)
-  target_link_options(${TEST} PUBLIC -L${CMAKE_BINARY_DIR}/petsc/opt/petsc/lib)
-  add_dependencies(${TEST} petsc)
+  # set_property(TARGET ${TEST} PROPERTY ENABLE_EXPORTS 1)
+  target_include_directories(${TEST} PUBLIC ${PETSc_INCLUDE_DIRS})
+  link_directories(${PETSc_LIBRARY_DIRS})
+  target_link_libraries(${TEST} PUBLIC petsc_real)
+  # target_link_options(${TEST} PUBLIC  -L${CMAKE_BINARY_DIR}/petsc/opt/petsc/lib)
 endfunction()
 
+petsc_test(test_petsc_ksp)
 petsc_test(vectorMatrixMultiplication)
