--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -42,7 +42,7 @@ jobs:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           ec2-image-id: ami-03af087024bfdbbee
-          ec2-instance-type: g4dn.xlarge
+          ec2-instance-type: g4ad.xlarge
           iam-role-name: Role4Github
           subnet-id: subnet-b5d2adbb
           security-group-id: sg-559f8967
