--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -54,7 +54,8 @@ jobs:
             ]
           pre-runner-script: |
                  #!/bin/bash
-                 . /root/spack/share/spack/setup-env.sh 
+                 . /root/spack/share/spack/setup-env.sh
+                 spack install node-js
                  #sudo yum update -y && \
                  #sudo yum install docker git libicu ninja-build libasan10 -y
                  #sudo amazon-linux-extras install epel -y
