--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -56,6 +56,8 @@ jobs:
                  #!/bin/bash
                  . /root/spack/share/spack/setup-env.sh
                  spack install node-js
+                 rm /actions-runner/externals/node20/bin/node
+                 ln -s /root/spack/opt/spack/linux-centos7-x86_64_v3/gcc-10.5.0/node-js-22.11.0-mrucyknlrjtbai4kihv5widviflhliip/bin/node /actions-runner/externals/node20/bin/node
                  #sudo yum update -y && \
                  #sudo yum install docker git libicu ninja-build libasan10 -y
                  #sudo amazon-linux-extras install epel -y
