--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -56,8 +56,6 @@ jobs:
                  #!/bin/bash
                  . /root/spack/share/spack/setup-env.sh
                  spack install node-js
-                 sudo rm /actions-runner/externals/node20/bin/node
-                 sudo ln -s /root/spack/opt/spack/linux-centos7-x86_64_v3/gcc-10.5.0/node-js-22.11.0-mrucyknlrjtbai4kihv5widviflhliip/bin/node /actions-runner/externals/node20/bin/node
                  #sudo yum update -y && \
                  #sudo yum install docker git libicu ninja-build libasan10 -y
                  #sudo amazon-linux-extras install epel -y
@@ -94,6 +92,11 @@ jobs:
       matrix:
         preset: ["develop", "production"]
     steps:
+      - name: Prepare environment
+        shell: bash -i {0}
+        run: |
+          sudo rm /actions-runner/externals/node20/bin/node
+          sudo ln -s /root/spack/opt/spack/linux-centos7-x86_64_v3/gcc-10.5.0/node-js-22.11.0-mrucyknlrjtbai4kihv5widviflhliip/bin/node /actions-runner/externals/node20/bin/node
       - name: Checkout NeoFOAM
         uses: actions/checkout@v2
       - name: Set up cache
