--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -56,32 +56,6 @@ jobs:
                  #!/bin/bash
                  . /root/spack/share/spack/setup-env.sh
                  spack install node-js
-                 #sudo yum update -y && \
-                 #sudo yum install docker git libicu ninja-build libasan10 -y
-                 #sudo amazon-linux-extras install epel -y
-                 #sudo yum install Lmod -y
-                 #sudo systemctl enable docker
-                 #sudo mkfs -t xfs /dev/sda1
-                 #sudo mkdir -p /share
-                 #sudo mount /dev/sda1 /share
-                 #aws s3 cp s3://ucfd-share/pcluster/3.x/alinux2/x86_64/postinstall_github .
-                 #chmod +x postinstall_github
-                 #sudo ./postinstall_github > ~/install.log
-                 #mkdir -p /share/ec2-user
-                 #export USER=ec2-user
-                 #cd /share/ec2-user
-                 #mkdir .nvm
-                 #export NVM_DIR=/share/ec2-user/.nvm
-                 #sudo curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash
-                 #[ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
-                 #nvm install v16.20.2
-                 #echo "NVM_DIR=/share/ec2-user/.nvm" >> $GITHUB_ENV
-                 #echo "NVM_BIN=/share/ec2-user/.nvm/versions/node/v16.20.2/bin" >> $GITHUB_ENV
-                 # load rocm
-                 #echo -e "[ROCm]\nname=ROCm\nbaseurl=https://repo.radeon.com/rocm/yum/6.2.4/main/\nenabled=1\ngpgcheck=1\ngpgkey=https://repo.radeon.com/rocm/rocm.gpg.key" | sudo tee /etc/yum.repos.d/rocm.repo > /dev/null
-                 #sudo yum install amdgpu -y
-                 #sudo yum install rocm-libs -y
-                 #cp /opt/rocm/lib/rocmmod /share/lmod/modulefiles/Compilers/rocm-6.2.4
 
   build-on-aws:
     name: Build on aws
@@ -97,6 +71,7 @@ jobs:
         run: |
           sudo rm /actions-runner/externals/node20/bin/node
           sudo ln -s /root/spack/opt/spack/linux-centos7-x86_64_v3/gcc-10.5.0/node-js-22.11.0-mrucyknlrjtbai4kihv5widviflhliip/bin/node /actions-runner/externals/node20/bin/node
+          module use /usr/share/lmod/lmod/modulefiles/Compilers
       - name: Checkout NeoFOAM
         uses: actions/checkout@v2
       - name: Set up cache
@@ -110,7 +85,6 @@ jobs:
         run: |
           . /root/spack/share/spack/setup-env.sh
           spack load cmake
-          spack load rocthrust
           spack load hip
           spack load kokkos
           module load clang/17
