--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -72,7 +72,7 @@ jobs:
         shell: bash -i {0}
         run: |
           sudo rm /actions-runner/externals/node20/bin/node
-          sudo ln -s /root/spack/opt/spack/linux-centos7-x86_64_v3/gcc-10.5.0/node-js-22.11.0-mrucyknlrjtbai4kihv5widviflhliip/bin/node /actions-runner/externals/node20/bin/node
+          sudo ln -s /root/spack/opt/spack/linux-centos7-x86_64_v3/gcc-10.5.0/node-js*/bin/node /actions-runner/externals/node20/bin/node
       - name: Checkout NeoFOAM
         uses: actions/checkout@v2
       - name: Set up cache
