--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -56,7 +56,6 @@ jobs:
                  #!/bin/bash
                  . /root/spack/share/spack/setup-env.sh
                  spack install node-js
-                 spack install kokkos@4.3.0
                  echo 'module use /usr/share/lmod/lmod/modulefiles/Compilers' >> /root/.bashrc
                  echo 'module use /usr/share/lmod/lmod/modulefiles/Compilers' >> /ec2-user/.bashrc
 
@@ -88,7 +87,7 @@ jobs:
           . /root/spack/share/spack/setup-env.sh
           spack load cmake
           spack load hip
-          spack load kokkos@4.3.0
+          spack load kokkos
           module load clang/17
           cmake --version
           CC=clang \
