--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -82,9 +82,9 @@ jobs:
         shell: bash -i {0}
         run: |
           . /root/spack/share/spack/setup-env.sh
-          spack load cmake
+          spack load cmake@3.30.5
           spack load hip
-          spack load kokkos
+          spack load kokkos@4.3.00
           module load clang/17
           cmake --version
           CC=clang \
@@ -113,7 +113,7 @@ jobs:
         run: |
           . /root/spack/share/spack/setup-env.sh
           module load gnu/11
-          spack load cmake
+          spack load cmake@3.30.5
           cmake --version
           python3 -m pip install xmltodict
           CC=clang \
