--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -100,7 +100,7 @@ jobs:
         run: |
           . /root/spack/share/spack/setup-env.sh
           module load gnu/11
-          spack load cmake
+          spack load cmake@3.30.5
           ctest --preset ${{matrix.preset}}
   benchmark-on-aws:
     name: Benchmark on aws
