moved utilites into source file

--- a/test/timeIntegration/CMakeLists.txt
+++ b/test/timeIntegration/CMakeLists.txt
@@ -2,6 +2,7 @@
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
 neofoam_unit_test(timeIntegration)
+neofoam_unit_test(implicitTimeIntegration)
 if(NOT WIN32)
   neofoam_unit_test(rungeKutta)
 endif()
