--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -112,7 +112,7 @@ jobs:
         shell: bash -i {0}
         run: |
           . /root/spack/share/spack/setup-env.sh
-          module load gnu/11
+          module load clang/17
           spack load cmake@3.30.5
           cmake --version
           python3 -m pip install xmltodict
