--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -61,6 +61,8 @@ jobs:
           pre-runner-script: |
                  #!/bin/bash
                  . /root/spack/share/spack/setup-env.sh
+                 sudo rm /usr/local/cuda
+                 sudo ln -s /usr/local/cuda-12.2 /usr/local/cuda
 
   build-on-aws:
     name: Build on aws
