--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -26,6 +26,8 @@ jobs:
       fail-fast: false
       matrix:
         instance:
+          - TYPE: g4ad.xlarge
+            AMI: ami-0f8c4824f9f2e449e
           - TYPE: g4dn.xlarge
             AMI: ami-06615d18bfde0a1e7
     runs-on: ubuntu-latest
