--- a/.github/workflows/build_on_aws.yaml
+++ b/.github/workflows/build_on_aws.yaml
@@ -116,8 +116,12 @@ jobs:
   benchmark-on-aws:
     name: Benchmark on aws
     needs: [start-runner, build-on-aws] # required to start the main job when the runner is ready
-    runs-on: ${{ needs.start-runner.outputs.label }} # run the job on the newly created runner
+    runs-on: ${{ matrix.runner }} # run the job on the newly created runner
     if: github.event.inputs.debug != 'true'
+    strategy:
+      fail-fast: false
+      matrix:
+        runner: ${{ fromJson(needs.start-runner.outputs.labels) }}
     steps:
       - name: Build NeoFOAM
         shell: bash -i {0}
