replace Operator with Spatial and TemporalOperator

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,7 +23,8 @@ target_sources(
           "core/demangle.cpp"
           "core/tokenList.cpp"
           "dsl/coeff.cpp"
-          "dsl/operator.cpp"
+          "dsl/spatialOperator.cpp"
+          "dsl/temporalOperator.cpp"
           "executor/CPUExecutor.cpp"
           "executor/GPUExecutor.cpp"
           "executor/serialExecutor.cpp"
