unit test with petsc using kokkos + change to kokkos vector and matrices

--- a/test/petsc/CMakeLists.txt
+++ b/test/petsc/CMakeLists.txt
@@ -10,12 +10,15 @@ message("${PETSc_LIBRARY_DIRS}")
 message("INCLUDE_DIRS")
 message("${PETSc_INCLUDE_DIRS}")
 
+message("CMAKE_C_COMPILER")
+message("${CMAKE_CXX_COMPILER}")
+
 function(petsc_test TEST)
   add_executable(${TEST} "${TEST}.cpp")
   # set_property(TARGET ${TEST} PROPERTY ENABLE_EXPORTS 1)
-  target_include_directories(${TEST} PUBLIC ${PETSc_INCLUDE_DIRS})
+  target_include_directories(${TEST} PRIVATE ${PETSc_INCLUDE_DIRS})
   link_directories(${PETSc_LIBRARY_DIRS})
-  target_link_libraries(${TEST} PUBLIC petsc_real)
+  target_link_libraries(${TEST} PRIVATE petsc)
   # target_link_options(${TEST} PUBLIC  -L${CMAKE_BINARY_DIR}/petsc/opt/petsc/lib)
 endfunction()
 
