linear system running on cpu and serial but crashes on gpu

--- a/test/matrixPetsc/CMakeLists.txt
+++ b/test/matrixPetsc/CMakeLists.txt
@@ -41,3 +41,4 @@ function(neofoam_unit_test_petsc TEST)
 endfunction()
 
 neofoam_unit_test_petsc(matrixAssembly)
+neofoam_unit_test_petsc(solutionLinearSystem)
