preprocessor directives to compile eighter with gingko or with petsc

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -17,8 +17,13 @@ if(NEOFOAM_WITH_GINKGO)
   target_link_libraries(NeoFOAM_public_api INTERFACE Ginkgo::ginkgo)
   target_compile_definitions(NeoFOAM_public_api INTERFACE NF_WITH_GINKGO=1)
   # set_property( TARGET Ginkgo::ginkgo APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS )
+elseif(NEOFOAM_WITH_PETSC)
+  add_definitions(${PETSc_DEFINITIONS})
+  target_link_libraries(NeoFOAM_public_api INTERFACE ${PETSc_LIBRARIES})
+  target_compile_definitions(NeoFOAM_public_api INTERFACE NF_WITH_PETSC=1)
 else()
   target_compile_definitions(NeoFOAM_public_api INTERFACE NF_WITH_GINKGO=0)
+  target_compile_definitions(NeoFOAM_public_api INTERFACE NF_WITH_PETSC=0)
 endif()
 
 if(${CMAKE_BUILD_TYPE} MATCHES Debug)
