almost working petsc solver

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -109,7 +109,7 @@ endfunction()
 add_subdirectory(core)
 # add_subdirectory(dsl)
 add_subdirectory(fields)
-add_subdirectory(finiteVolume)
+# add_subdirectory(finiteVolume)
 add_subdirectory(linearAlgebra)
 add_subdirectory(mesh)
 # add_subdirectory(timeIntegration)
