set MPI support macro in public api target

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -20,3 +20,17 @@ endif()
 if(${CMAKE_BUILD_TYPE} MATCHES RelWithDebInfo)
   target_compile_definitions(NeoFOAM_public_api INTERFACE NF_DEBUG_INFO)
 endif()
+
+if(NEOFOAM_DP_SCALAR)
+  target_compile_definitions(NeoFOAM_public_api INTERFACE NEOFOAM_DP_SCALAR=1)
+endif()
+if(NEOFOAM_DP_LABEL)
+  target_compile_definitions(NeoFOAM_public_api INTERFACE NEOFOAM_DP_LABEL=1)
+endif()
+
+if(NEOFOAM_ENABLE_MPI_SUPPORT)
+  target_compile_definitions(NeoFOAM_public_api INTERFACE NF_WITH_MPI_SUPPORT=1)
+  if(NEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT)
+    target_compile_definitions(NeoFOAM_public_api INTERFACE NF_REQUIRE_MPI_THREAD_SUPPORT=1)
+  endif()
+endif()
