add missing MPI target to mpi tests

--- a/test/catch2/CMakeLists.txt
+++ b/test/catch2/CMakeLists.txt
@@ -4,8 +4,9 @@
 if(NEOFOAM_ENABLE_MPI_SUPPORT)
   add_library(neofoam_catch_main_mpi test_main_mpi.cpp mpiReporter.cpp mpiGlobals.cpp
                                      mpiSerialization.cpp)
-  target_link_libraries(neofoam_catch_main_mpi PUBLIC Catch2::Catch2 cpptrace::cpptrace
-                                                      Kokkos::kokkos NeoFOAM_public_api)
+  target_link_libraries(
+    neofoam_catch_main_mpi PUBLIC Catch2::Catch2 cpptrace::cpptrace Kokkos::kokkos
+                                  NeoFOAM_public_api MPI::MPI_CXX)
   target_link_libraries(neofoam_catch_main_mpi PRIVATE neofoam_warnings neofoam_options)
 endif()
 
